// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index should write all items to a sitemap 1`] = `

<?xml version="1.0"
      encoding="utf-8"
?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9"
        xmlns:image="http://www.google.com/schemas/sitemap-image/1.1"
>
  <url>
    <loc>
      https://www.example.org/test1
    </loc>
    <lastmod>
      2018-01-01
    </lastmod>
  </url>
  <url>
    <loc>
      https://www.example.org/test2
    </loc>
    <lastmod>
      2018-01-01
    </lastmod>
  </url>
</urlset>

`;

exports[`index should write all items to a sitemap 2`] = `

<?xml version="1.0"
      encoding="utf-8"
?>
<sitemapindex xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <sitemap>
    <loc>
      https://www.example.org/sitemap.0.xml
    </loc>
    <lastmod>
      2018-01-02T12:00:00.000Z
    </lastmod>
  </sitemap>
</sitemapindex>

`;

exports[`index should write all items to a sitemap when there's only one page 1`] = `

<?xml version="1.0"
      encoding="utf-8"
?>
<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9"
        xmlns:image="http://www.google.com/schemas/sitemap-image/1.1"
>
  <url>
    <loc>
      https://www.example.org/test1
    </loc>
    <lastmod>
      2018-01-01
    </lastmod>
  </url>
</urlset>

`;

exports[`index should write all items to a sitemap when there's only one page 2`] = `

<?xml version="1.0"
      encoding="utf-8"
?>
<sitemapindex xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
  <sitemap>
    <loc>
      https://www.example.org/sitemap.0.xml
    </loc>
    <lastmod>
      2018-01-02T12:00:00.000Z
    </lastmod>
  </sitemap>
</sitemapindex>

`;
